Add version and link to github in options page.
And change margin styling

--- a/ZM Chameleon/options.html
+++ b/ZM Chameleon/options.html
@@ -6,6 +6,16 @@
   </head>
   <body>
     <div>
+      <h2>ZM Chameleon</h2>
+      <h3>Written by Joe Fornecker</h3>
+      <h3>fornecker.joseph@gmail.com</h3>
+      <h3 id="version"></h3>
+      <a href="https://github.com/makers-mark/ZM-Chameleon">
+        Link to github page https://github.com/makers-mark/ZM-Chameleon
+      </a>
+      <hr>
+    </div>
+    <div>
       <h2>The opacity and flash speed options below will require a refresh (F5) of the Zoneminder page to take effect.</h2>
       <h3>Alarm Opacity: <span id="alarmOpacityText"></span></h3>
       <input type="range" step="0.05" class="optionsSlider" min="0" max="1" id="alarmOpacity">
