--- a/options.html
+++ b/options.html
@@ -16,7 +16,7 @@
       <hr>
     </div>
     <div>
-      <h2>The opacity and flash speed options below will require a refresh (F5) of the Zoneminder page to take effect.</h2>
+      <h3>The opacity and flash speed options below will require a refresh (F5) of the ZoneMinder page to take effect.</h3>
       <h3>Alarm Opacity: <span id="alarmOpacityText"></span></h3>
       <input type="range" step="0.05" class="optionsSlider" min="0" max="1" id="alarmOpacity">
       <br>
@@ -32,11 +32,11 @@
       </h3>
       <hr>
       <h3>Custom 'Url-contains' that matches pages that this extension should be run on:<input id="customLocation"></input></h3>
-      <h4>Examples: 'https://192.168.0.2/zm' OR 'zm'</h4>
+      <h4>Examples: 'https://192.168.0.2/zm' OR 'zm' OR 'localhost'...</h4>
       <hr>
+      <h3>Fps Color <input type="color" id="fpsColor"></h3>
       <h3><input type="checkbox" id="showFps">Show FPS</h3>
       <h3><input type="checkbox" id="lockRecordButton">Lock the record button positions on all monitors</h3>
-      <input type="color" id="fpsColor">
       <hr>
       <h3>You can use the two fields below to autofill the user and password at the login screen.</h3>
       <h3 class="warning">This is NOT recommended because the information is stored in local storage on your computer.<br></h3>
