Add option to hide the user name on the login page.

--- a/options.html
+++ b/options.html
@@ -10,9 +10,11 @@
       <h3>Written by Joe Fornecker</h3>
       <h3>fornecker.joseph@gmail.com</h3>
       <h3 id="version"></h3>
-      <a href="https://github.com/makers-mark/ZM-Chameleon">
-        Link to github page https://github.com/makers-mark/ZM-Chameleon
-      </a>
+      <h3>
+        <a href="https://github.com/makers-mark/ZM-Chameleon">
+        See the source and contribute on GitHub!
+        </a>
+      </h3>
       <hr>
     </div>
     <div>
@@ -43,6 +45,7 @@
       <h3>Do not use unless you understand the inherrent risks. For example, any person that uses your computer can access this data in plain text with the debugger.</h3>
       <h3>User: <span><input type="password" id="userName"></input></span></h3>
       <h3>Password: <span><input type="password" id="password"></input></span></h3>
+      <h3><input type="checkbox" id="obfuscate">Hide the user name on the login page.</h3>
       <hr>
       <div>
         <h3>Clearing storage will set the extension back to default values.
