Add disable record button on alert et al.
Other code changes too. Only send information to the popup that it needs instead of sending all of the apps settings when the popup opens.

Added a better way to load functions when the montage opens.

Css style changes for the margins.

--- a/options.html
+++ b/options.html
@@ -18,6 +18,7 @@
       <hr>
     </div>
     <div>
+      
       <h3>Alarm Opacity: <span id="alarmOpacityText"></span></h3>
       <input type="range" step="0.05" class="optionsSlider" min="0" max="1" id="alarmOpacity">
       <br>
@@ -38,6 +39,7 @@
       <h3>Fps Color <input type="color" id="fpsColor"></h3>
       <h3><input type="checkbox" id="showFps">Show FPS</h3>
       <h3><input type="checkbox" id="lockRecordButton">Lock the record button positions on all monitors</h3>
+      <h3><input type="checkbox" id="disableRecordOnAlert">Disable the record button in 'Alert/yellow' mode</h3>
       <hr>
       <h3>You can use the two fields below to autofill the user and password at the login screen.</h3>
       <h3 class="warning">This is NOT recommended because the information is stored in local storage on your computer.<br></h3>
