Add extension id details to options page.

--- a/options.html
+++ b/options.html
@@ -11,6 +11,7 @@
       <h3>Written by Joe Fornecker</h3>
       <h3>fornecker.joseph@gmail.com</h3>
       <h3 id="version"></h3>
+      <h3 id="whoami"></h3>
       <h3>
         <a href="https://github.com/makers-mark/ZM-Chameleon">
         See the source and contribute on GitHub!
