Add button on montage view to go to the console screen
Still need to change the image and put some logic in to take it out of fullscreen if it is in fullscreen.

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 	<div id="top">
-		<img src="icons/Actions-window-close-icon.png" id="closeIcon">
+		<img src="icons\Actions-window-close-icon.png" id="closeIcon">
 		<img src="icons\header.png" alt="ZM Chameleon" id="logo" class="center">
 		<hr style="margin-top: -18px;">
 	</div>
