--- a/options.html
+++ b/options.html
@@ -20,24 +20,20 @@
       <hr>
     </div>
     <div>
-      
-      <h3>Alarm Opacity: <span id="alarmOpacityText"></span></h3>
-      <input type="range" step="0.05" class="optionsSlider" min="0" max="1" id="alarmOpacity">
-      <br>
-      <div>
-        <h3>Alert Opacity: <span id="alertOpacityText"></span></h3>
-      </div>
-      <input type="range" step="0.05" class="optionsSlider" min="0" max="1" id="alertOpacity">
-      <h3>Flashing animation speed (seconds):<input type="number" class="smallNumber" id="flashSpeed" min="0" step="0.01"></h3>
+      <h3>Alarm Opacity: <input type="range" step="0.05" class="optionsSlider" min="0" max="1" id="alarmOpacity"><span id="alarmOpacityText"></span></h3>
+      <h3>Alert Opacity: <input type="range" step="0.05" class="optionsSlider" min="0" max="1" id="alertOpacity"><span id="alertOpacityText"></span></h3>
+      <h3>Flashing animation speed (seconds): <input type="number" class="smallNumber" id="flashSpeed" min="0" step="0.01"></h3>
       <h4>(default is 0.6 seconds, and setting this to 0 will disable the flash animation)</h4>
       <hr>
       <h3>By default the max range for the grid width and flash on alarm width is 10. You can change that here.
         <input type="number" min="1" id="widthMax" class="smallNumber">
       </h3>
       <hr>
-      <h3>Custom 'Url-contains' that matches pages that this extension should be run on:<input id="customLocation"></input></h3>
+      <h3>Custom 'Url-contains' that matches pages that this extension should be run on: <input id="customLocation"></input></h3>
       <h4>Examples: 'https://192.168.0.2/zm' OR 'zm' OR 'localhost'...</h4>
       <hr>
+      <h3>Drop shadow string (default is '2px 4px 6px'): <input id="dropShadowString" type="text" value="2px 4px 6px"></input><button id="dropShadowApply" class="blueButton">Apply</button><button id="dropShadowStringReset" class="blueButton">Reset</button></h3>
+      <h3>Color Inversion Amount: <input type="range" step="0.01" class="optionsSlider" min="0" max="1" id="inversionAmount"> <span id="inversionAmountText"></span></h3>
       <h3>Fps Color <input type="color" id="fpsColor"></h3>
       <h3><input type="checkbox" id="showFps">Show FPS</h3>
       <h3><input type="checkbox" id="lockRecordButton">Lock the record button position on all monitors</h3>
@@ -59,7 +55,7 @@
       <hr>
       <div>
         <h3>Clearing storage will set the extension back to default values.
-          <button id="clearStorage">Clear Storage</button>
+          <button id="clearStorage" class="blueButton">Clear Storage</button>
         </h3>
       </div>
     </div>
