Features and updates
Fix typo (extra }) in initMontage().
Made numbers input larger on Option page.
Changed default grid maximum size (and flash alarm) to 20 from 10.
Made it so clearing the storage for the extension will also reload everything, even the ZoneMinder page.
Added the functionality to go directly back to the console from the montage page by clicking the right and left mouse buttons at the same time. And if the montage page was in F11 fullscreen mode, make it back to normal. Will adjust this  to go back to whatever state it was in.

--- a/options.html
+++ b/options.html
@@ -25,7 +25,7 @@
       <h3>Flashing animation speed (seconds): <input type="number" class="smallNumber" id="flashSpeed" min="0" step="0.01"></h3>
       <h4>(default is 0.6 seconds, and setting this to 0 will disable the flash animation)</h4>
       <hr>
-      <h3>By default the max range for the grid width and flash on alarm width is 10. You can change that here.
+      <h3>By default the max range for the grid width and flash on alarm width is 20. You can change that here.
         <input type="number" min="1" id="widthMax" class="smallNumber">
       </h3>
       <hr>
@@ -54,7 +54,7 @@
       <h3><input type="checkbox" id="obfuscate">Hide the user name on the login page.</h3>
       <hr>
       <div>
-        <h3>Clearing storage will set the extension back to default values.
+        <h3>Clearing storage will set the extension back to default values and reload the extension and ZoneMinder tab.
           <button id="clearStorage" class="blueButton">Clear Storage</button>
         </h3>
       </div>
