--- a/popup.html
+++ b/popup.html
@@ -86,6 +86,15 @@
 					<input type="range" step="0.25" min="0" class="mySlider" id="gridWidth">
 				</td>
 			</tr>
+			<tr>
+				<td>
+					<label class="switch smallSwitch">
+						<input type="checkbox" id="transparentGrid">
+						<span class="smallSlider round"></span>
+					</label>
+				</td>
+				<td><h4>Transparent Grid</h4></td>
+			</tr>
 		</table>
 		<hr>
 		<table>
