Small bug fixes

--- a/options.html
+++ b/options.html
@@ -29,7 +29,7 @@
         <input type="number" min="1" id="widthMax" class="smallNumber">
       </h3>
       <hr>
-      <h3>Custom 'Url-contains' that matches pages that this extensions popup is enabled on: <input id="customLocation"></input></h3>
+      <h3>Custom 'Url-contains' that matches pages that this extensions popup is enabled on: <input style="width:100%;" id="customLocation"></input></h3>
       <h4>Examples: 'https://192.168.0.2/zm' OR 'zm' OR 'localhost'...</h4>
       <hr>
       <h3>Drop shadow string (default is '2px 4px 6px'): <input id="dropShadowString" type="text" value="2px 4px 6px"></input><button id="dropShadowApply" class="blueButton">Apply</button><button id="dropShadowStringReset" class="blueButton">Reset</button></h3>
