Renaming of popup stylesheets
Added preload for the popup to make the initial css faster. This does throw a warning in the developer console because I preload both the light stylesheet and dark one. And one of them won't be used.

--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,10 @@
 <html>
   <head>
 	<title>ZM Chameleon</title>
-	<link rel="preload" href="css/base-stylesheet.css" as="style">
-	<link rel="stylesheet" href="css/base-stylesheet.css">
+	<link rel="preload" href="css/popup-base-stylesheet.css" as="style">
+	<link rel="preload" href="css/popup-stylesheet.css" as="style">
+	<link rel="preload" href="css/popup-dark-stylesheet.css" as="style">
+	<link rel="stylesheet" href="css/popup-base-stylesheet.css">
   </head>
   <body>
 	<div id="top">
