Time diluted changes

--- a/options.html
+++ b/options.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>ZM Chameleon Options</title>
+    <link rel="preload" href="css/options-stylesheet.css" as="style">
+    <link rel="preload" href="css/watch-content-stylesheet.css" as="style">
+    <link rel="preload" href="js/options.js" as="script">
     <link rel="stylesheet" href="css/options-stylesheet.css">
     <link rel="stylesheet" href="css/watch-content-stylesheet.css">
   </head>
