Rename variables, fix logic

--- a/popup.html
+++ b/popup.html
@@ -109,7 +109,7 @@
 		<tr>
 			<td>
 				<label class="switch smallSwitch">
-					<input type="checkbox" id="forceAspect">
+					<input type="checkbox" id="overrideMontageAspect">
 					<span class="smallSlider round"></span>
 				</label>
 			</td>
