--- a/options.html
+++ b/options.html
@@ -41,7 +41,7 @@
       <h3>Color Inversion Amount: <input type="range" step="0.01" class="optionsSlider" min="0" max="1" id="inversionAmount"> <span id="inversionAmountText"></span></h3>
       <h3><input type="checkbox" id="applyFilters">Apply filters to single monitor view</h3>
       <h3>Force Aspect ratio on Montage (default is 16/9): <input id="aspectRatio" type="text" value="16/9"></input><button id="aspectRatioApply" class="blueButton">Apply</button><button id="aspectRatioReset" class="blueButton">Reset</button></h3>
-      <h3><input type="checkbox" id="forceAspect" checked> Maintain aspect ratio when 'Maximize Single View' is toggled in the popup</h3>
+      <h3><input type="checkbox" id="maintainSingleMonitorAspect" checked> Maintain aspect ratio when 'Maximize Single View' is toggled in the popup</h3>
       <hr>
       <h3><input type="checkbox" id="showFps">Show FPS</h3>
       <table>
