Add Ghost Header/Custom CSS. Small fixes/changes.

--- a/options.html
+++ b/options.html
@@ -55,6 +55,10 @@
       <h3>Color Inversion Amount: <input type="range" step="0.01" class="optionsSlider" min="0" max="1" id="inversionAmount"> <span id="inversionAmountText"></span></h3>
       <h3><input type="checkbox" id="applyFilters">Apply filters to single monitor view</h3>
       <h3>Force Aspect Ratio on Montage (default is 4/3): <input id="aspectRatio" type="text" value="4/3"><button id="aspectRatioApply" class="blueButton">Apply</button><button id="aspectRatioReset" class="blueButton">Reset</button></h3>
+      <h3><input type="checkbox" id="ghostHeader"> Ghost Header </h3>
+      <h4> This makes the Header/Nav transparent, sticky/movable, and unobtrusive (EXPERIMENTAL)</h4>
+      <h4> Custom CSS for Ghost Header:</h4>
+      <textarea style="width: 60%;" spellcheck="false" cols=60 rows=20 id="customCSS"></textarea><button id="customCSSApply" class="blueButton top">Apply</button><button id="customCSSReset" class="blueButton top">Reset</button></h3>
       <hr>
       <div class="head">
         Console Icon Appearance
