--- a/popup.html
+++ b/popup.html
@@ -90,7 +90,7 @@
 					<span class="smallSlider round"></span>
 				</label>
 			</td>
-			<td><h4 id="sliderText">Monitors Per Row</h4></td>
+			<td><h4>Monitors Per Row: <span id="sliderText"></span></h4></td>
 		</tr>
 		<tr>
 			<td colspan="3"> 
