Add Hue-Rotate, need to work on css. MaxSingleView

--- a/popup.html
+++ b/popup.html
@@ -107,6 +107,12 @@
 			<td><h4>Invert Colors</h4></td>
 		</tr>
 		<tr>
+			<td><h4>Hue Rotate</h4></td>
+			<td>
+				<input type="range" step="1" min="0" max="360" class="mySmallSlider" id="hueRotate">
+			</td>
+		</tr>				
+		<tr>
 			<td>
 				<label class="switch smallSwitch">
 					<input type="checkbox" id="overrideMontageAspect">
